--- a/taskmanager/templates/base.html
+++ b/taskmanager/templates/base.html
@@ -18,14 +18,14 @@
 
     <header>
         <!-- top navbar -->
-        <nav class="#512da8 deep-purple darken-2">
+        <nav class="light-blue darken-1">
             <div class="nav-wrapper">
             <a href="{{ url_for('home') }}" class="brand-logo">Task Manager</a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="{{ url_for('home') }}">Home</a></li>
-                <li><a href="">New Task</a></li>
-                <li><a href="">Categories</a></li>
+                <li><a href="{{ url_for('add_task') }}">New Task</a></li>
+                <li><a href="{{ url_for('categories') }}">Categories</a></li>
             </ul>
             </div>
         </nav>
@@ -33,8 +33,8 @@
         <!-- mobile sidenav -->
         <ul class="sidenav" id="mobile-demo">
             <li><a href="{{ url_for('home') }}">Home</a></li>
-            <li><a href="">New Task</a></li>
-            <li><a href="">Categories</a></li>
+            <li><a href="{{ url_for('add_task') }}">New Task</a></li>
+            <li><a href="{{ url_for('categories') }}">Categories</a></li>
         </ul>
     </header>
 
@@ -43,8 +43,7 @@
         {% endblock %}
     </main>
 
-    <footer class="page-footer #512da8 #7e57c2 deep-purple lighten-1
-    ">
+    <footer class="page-footer blue darken-3">
         <div class="footer-copyright">
             <div class="container">
                 For educational purposes only
